<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.syme.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_productosFragment"
            app:destination="@id/nav_prod" />
        <action
            android:id="@+id/action_nav_home_to_mantenimientoFragment"
            app:destination="@id/nav_mantenimiento" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.syme.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.syme.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_prod"
        android:name="com.example.syme.ui.productos.ProductosFragment"
        android:label="fragment_productos"
        tools:layout="@layout/fragment_productos" />
    <fragment
        android:id="@+id/nav_mantenimiento"
        android:name="com.example.syme.ui.mantenimiento.mantenimientoFragment"
        android:label="fragment_mantenimiento"
        tools:layout="@layout/fragment_mantenimiento" />
</navigation>